--- a/estilos.css
+++ b/estilos.css
@@ -3,8 +3,6 @@ header#cabecera
     background-color: rgba(240, 186, 9, 0.842);
     height: 30vh;
     width: 100vw;
-    margin-top: -8px;
-    margin-left: -8px;
     align-items: center;
 }
 
@@ -17,8 +15,10 @@ div#navegacion
 h1#nav
 {
     width: 25vw;
-    margin-top: 6vh;
+    margin-top: 5vh;
     text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;
 }
 
 a#enlace
@@ -51,7 +51,7 @@ div#contenedor
 .carrusel figure
 {
     width: 100%;
-    height: 350px;
+    height: 450px;
     overflow: hidden;
     position: absolute;
     box-shadow: 0px 0px 20px 0px black;
@@ -83,5 +83,177 @@ div#contenedor
     {
         transform: rotateY(360deg);
     }
+}
+
+
+
+div#identidad
+{
+    background-color: rgba(240, 186, 9, 0.842);
+    height: 90px;
+    width: 100vw;
+    margin-top: 47vh;
+    display: flex;
+    align-items: center;
+    
+}
+
+div#contenedorIdentidad
+{
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    padding-right: 20vw;
+}
+
+h1#identidadText
+{
+    width: 100vw;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;
+}
+
+h2#identidadText1
+{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;
+}
+
+h4#identidadText2
+{
+    font-size: 18px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;
+}
+
+div#contendorTextoIdentidad
+{
+    margin-left: 14vw;
+}
+
+div#contenedorImagenIdentidad
+{
+    width: 600px;
+    height: 400px;
+    margin-left: 50px;
+}
+
+div#promos
+{
+    background-color: rgba(240, 186, 9, 0.842);
+    height: 90px;
+    width: 100vw;
+    /*margin-top: 37vh;*/
+    margin-top: 2vh;
+    display: flex;
+    align-items: center;
+
+}
+
+h1#promosText
+{
+    width: 100vw;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;
+}
+
+.container-tarjetas{
+    width: 100%;
+    max-width: 1200px;
+    height: 430px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: 22vw;
+    margin-top: 50px;
+    margin-bottom: -570px;
+    
+}
+
+.container-tarjetas .card{
+    width: 330px;
+    height: 380px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    margin-left: 70px;
+    margin-right: 70px;
+    text-align: center;
+    transition: all 0.25s;
+}
+
+.container-tarjetas .card:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.container-tarjetas .card img{
+    width: 330px;
+    height: 220px;
+}
+
+
+.container-tarjetas .card h4{
+    font-weight: 600;
+}
+
+.container-tarjetas .card p{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+div#volver
+{
+    margin-top: 52vh;
+    margin-left: 48vw;
+    margin-bottom: -48vh;
+}
+
+div#divisorFooter
+{
+    background-color: rgba(240, 186, 9, 0.842);
+    width: 100vw;
+    height: 10px;
+    margin-top: 50vh;
+}
+
+a#icono
+{
+    padding: 0px 30px 0px 0px;
+  }
+  
+footer#piePagina
+{
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    height: 200px;
+}
+  
+div#Primersec
+{
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+}
+  
+div#Segundasec
+{
+    background-color: rgb(0, 1, 39);
+}
+  
+div#iconos
+{
+    display: flex;
+    flex-direction: row;
+}
+  
+h3#footer
+{
+    color: beige;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;
 }
     
