--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,9 @@
+/* Inicio */
+html
+{
+    scroll-behavior: smooth;
+}
+
 header#cabecera
 {
     background-color: rgba(240, 186, 9, 0.842);
@@ -36,19 +42,19 @@ div#contenedor
 
 }
 
-.carrusel
+div#carrusel
 {
     width: 100%;
     position: absolute;
     animation: rotar 60s infinite linear;
     transform-style: preserve-3d;
 }
-.carrusel:hover
+div#carrusel:hover
 {
     animation-play-state: paused;
     cursor: pointer;
 }
-.carrusel figure
+div#carrusel figure
 {
     width: 100%;
     height: 450px;
@@ -57,18 +63,18 @@ div#contenedor
     box-shadow: 0px 0px 20px 0px black;
 }
 /*translateZ es para aumentar el radio entre las imagenes*/
-.carrusel figure:nth-child(1){transform: rotateY(90deg) translateZ(600px);}
-.carrusel figure:nth-child(2){transform: rotateY(180deg) translateZ(600px);}
-.carrusel figure:nth-child(3){transform: rotateY(270deg) translateZ(600px);}
-.carrusel figure:nth-child(4){transform: rotateY(360deg) translateZ(600px);}
+div#carrusel figure:nth-child(1){transform: rotateY(90deg) translateZ(600px);}
+div#carrusel figure:nth-child(2){transform: rotateY(180deg) translateZ(600px);}
+div#carrusel figure:nth-child(3){transform: rotateY(270deg) translateZ(600px);}
+div#carrusel figure:nth-child(4){transform: rotateY(360deg) translateZ(600px);}
 
-.carrusel img
+div#carrusel img
 {
     width: 100%;
     transition: all 350ms;
 }
 
-.carrusel img:hover
+div#carrusel img:hover
 {
     -webkit-transform: scale(1.05);
 }
@@ -159,7 +165,8 @@ h1#promosText
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;
 }
 
-.container-tarjetas{
+div#contenedorTarjetas
+{
     width: 100%;
     max-width: 1200px;
     height: 430px;
@@ -172,7 +179,8 @@ h1#promosText
     
 }
 
-.container-tarjetas .card{
+div#contenedorTarjetas div#promoTarjeta
+{
     width: 330px;
     height: 380px;
     border-radius: 8px;
@@ -180,25 +188,29 @@ h1#promosText
     margin-left: 70px;
     margin-right: 70px;
     text-align: center;
+}
+
+div#contenedorTarjetas div#promoTarjeta:hover
+{
+    transform: translateY(-15px);
+    box-shadow: 0px 12px 16px rgba(0, 0, 0, 0.2);
     transition: all 0.25s;
 }
 
-.container-tarjetas .card:hover{
-    transform: translateY(-15px);
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-}
-
-.container-tarjetas .card img{
+div#contenedorTarjetas div#promoTarjeta img
+{
     width: 330px;
     height: 220px;
 }
 
 
-.container-tarjetas .card h4{
+div#contenedorTarjetas div#promoTarjeta h4
+{
     font-weight: 600;
 }
 
-.container-tarjetas .card p{
+div#contenedorTarjetas div#promoTarjeta p
+{
     padding: 0 1rem;
     font-size: 16px;
     font-weight: 300;
@@ -218,11 +230,6 @@ div#divisorFooter
     height: 10px;
     margin-top: 50vh;
 }
-
-a#icono
-{
-    padding: 0px 30px 0px 0px;
-  }
   
 footer#piePagina
 {
@@ -256,4 +263,175 @@ h3#footer
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;
 }
+
+/* Menu */
+
+div#contenedorTarjetasMenu
+{
+    width: 100%;
+    max-width: 1200px;
+    height: 430px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: 22vw;
+    margin-top: 50px;
+    margin-bottom: -570px;
     
+}
+
+div#contenedorTarjetasMenu div#menuTarjeta
+{
+    width: 330px;
+    height: 310px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    margin-left: 70px;
+    margin-right: 70px;
+    text-align: center;
+}
+
+div#contenedorTarjetasMenu div#menuTarjeta:hover
+{
+    box-shadow: 0px 12px 16px rgba(0, 0, 0, 0.2);
+    transition: all 0.25s;
+    -webkit-transform: scale(0.9);
+}
+
+div#contenedorTarjetasMenu div#menuTarjeta img
+{
+    width: 330px;
+    height: 220px;
+}
+
+
+div#contenedorTarjetasMenu div#menuTarjeta h4
+{
+    font-weight: 600;
+}
+
+div#contenedorTarjetasMenu div#menuTarjeta p
+{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+div#menuP1
+{
+
+}
+
+div#menuP2
+{
+    margin-top: 50vh;
+}
+
+/*Tarjetas de Platillos*/
+
+div#contenedorTarjetasPlatillos
+{
+    width: 100%;
+    max-width: 1200px;
+    height: 430px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: 22vw;
+    margin-top: 50px;
+    margin-bottom: -570px;
+    
+}
+
+div#contenedorTarjetasPlatillos div#platillosTarjeta
+{
+    width: 330px;
+    height: 350px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    margin-left: 70px;
+    margin-right: 70px;
+    text-align: center;
+}
+
+div#contenedorTarjetasPlatillos div#platillosTarjeta:hover
+{
+    box-shadow: 0px 12px 16px rgba(0, 0, 0, 0.2);
+    transition: all 0.25s;
+    -webkit-transform: scale(0.9);
+}
+
+div#contenedorTarjetasPlatillos div#platillosTarjeta img
+{
+    width: 330px;
+    height: 220px;
+}
+
+
+div#contenedorTarjetasPlatillos div#platillosTarjeta h4
+{
+    font-weight: 600;
+}
+
+div#contenedorTarjetasPlatillos div#platillosTarjeta p
+{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+/* Entradas */
+
+div#entradasHeader
+{
+    display: flex;
+    align-items: center;
+    background-color: rgba(240, 186, 9, 0.842);
+    width: 100vw;
+    height: 10vh;
+}
+
+h1#entradasHeaderText
+{
+    width: 100vw;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;
+}
+
+div#entradasP1
+{
+
+}
+
+div#entradasP2
+{
+    margin-top: 50vh;
+}
+
+/* Sopas */
+
+div#sopasHeader
+{
+    display: flex;
+    align-items: center;
+    background-color: rgba(240, 186, 9, 0.842);
+    width: 100vw;
+    height: 10vh;
+}
+
+h1#sopasHeaderText
+{
+    width: 100vw;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;
+}
+
+/* Alambres */
+
+/* Tacos */
+
+/* Bebidas */
+
+/* Postres */
