--- a/estilos.css
+++ b/estilos.css
@@ -193,7 +193,7 @@ div#contenedorTarjetas div#promoTarjeta
 {
     width: 330px;
     height: 380px;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     margin-left: 70px;
     margin-right: 70px;
@@ -234,6 +234,11 @@ div#volver
     margin-top: 52vh;
     margin-left: 48vw;
     margin-bottom: -48vh;
+}
+
+div#volver h4
+{
+    color: beige;
 }
 
 div#divisorFooter
@@ -297,7 +302,7 @@ div#contenedorTarjetasMenu div#menuTarjeta
 {
     width: 330px;
     height: 310px;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     margin-left: 70px;
     margin-right: 70px;
@@ -429,6 +434,34 @@ h1#platillosHeaderText
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;
+}
+
+div#galeria
+{
+    margin-bottom: -500px;
+}
+
+div#galeriaP
+{
+    display: flex;
+    flex-direction: row;
+    margin-top: 4vh;
+    margin-left: 27vw;
+}
+
+div#galeriaP img
+{
+    width: 250px;
+    height: 250px;
+    margin-left: 30px;
+    margin-right: 30px;
+    border-radius: 10px;
+}
+
+div#galeriaP img:hover
+{
+    transition: all 0.25s;
+    -webkit-transform: scale(1.1);
 }
 
 /* Alambres */
